Home__blessed CSS valign fix

--- a/src/nativeflavors/theme/theme/css/carousel.css
+++ b/src/nativeflavors/theme/theme/css/carousel.css
@@ -203,6 +203,10 @@
     color: #fff;
 }
 
+.carousel__image {
+    color: #fff;
+}
+
 .carousel__link {
     font-family: HappyFox;
     color: #fff;
