--- a/src/nativeflavors/theme/theme/scss/app.scss
+++ b/src/nativeflavors/theme/theme/scss/app.scss
@@ -428,6 +428,7 @@ p {
 }
 
 .home__blessed {
+	@include valign;
 	&::after, &::before {
 		content: '';
 		display: inline-block;
